Create a "Translate a phrase" schema

--- a/KazLinguo/View/TextViewController.xib
+++ b/KazLinguo/View/TextViewController.xib
@@ -9,6 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TextViewController" customModule="KazLinguo" customModuleProvider="target">
             <connections>
+                <outlet property="TCollectionView" destination="NlT-xi-YYc" id="1pd-sD-zhS"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -16,7 +17,25 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="NlT-xi-YYc">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kv0-tG-kYy">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="NlT-xi-YYc" secondAttribute="trailing" id="H7B-dN-SIe"/>
+                <constraint firstItem="NlT-xi-YYc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="LHA-KF-GyC"/>
+                <constraint firstItem="NlT-xi-YYc" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="pN2-AJ-68l"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="NlT-xi-YYc" secondAttribute="bottom" id="ztf-ls-1YA"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="137.68115942028987" y="144.64285714285714"/>
         </view>
