--- a/KazLinguo/View/TextViewController.xib
+++ b/KazLinguo/View/TextViewController.xib
@@ -10,6 +10,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TextViewController" customModule="KazLinguo" customModuleProvider="target">
             <connections>
                 <outlet property="TCollectionView" destination="NlT-xi-YYc" id="1pd-sD-zhS"/>
+                <outlet property="phraseLabel" destination="nek-vb-aA0" id="Fp7-nI-icf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="NlT-xi-YYc">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="85" width="414" height="777"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kv0-tG-kYy">
                         <size key="itemSize" width="50" height="50"/>
@@ -28,13 +29,21 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nek-vb-aA0">
+                    <rect key="frame" x="186" y="54" width="42" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="NlT-xi-YYc" secondAttribute="trailing" id="H7B-dN-SIe"/>
-                <constraint firstItem="NlT-xi-YYc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="LHA-KF-GyC"/>
-                <constraint firstItem="NlT-xi-YYc" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="pN2-AJ-68l"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="NlT-xi-YYc" secondAttribute="bottom" id="ztf-ls-1YA"/>
+                <constraint firstItem="NlT-xi-YYc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="6qp-aW-aex"/>
+                <constraint firstItem="nek-vb-aA0" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Rzm-ic-HyH"/>
+                <constraint firstItem="nek-vb-aA0" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="cpj-9d-BRJ"/>
+                <constraint firstItem="NlT-xi-YYc" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="ghN-Gv-vFN"/>
+                <constraint firstItem="NlT-xi-YYc" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="qZy-cg-M0V"/>
+                <constraint firstItem="NlT-xi-YYc" firstAttribute="top" secondItem="nek-vb-aA0" secondAttribute="bottom" constant="10" id="zeh-Io-SNI"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="137.68115942028987" y="144.64285714285714"/>
