--- a/KazLinguo/View/Base.lproj/Main.storyboard
+++ b/KazLinguo/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VyF-Bt-hXR">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
@@ -7,10 +7,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Main-->
         <scene sceneID="AC1-S3-opX">
             <objects>
                 <navigationController id="VxA-2a-2Pc" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Main" id="bkV-c6-llh"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0ea-or-Mnq">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -41,15 +42,6 @@
                                     <segue destination="1RK-It-CjN" kind="show" id="u5O-wa-uYR"/>
                                 </connections>
                             </button>
-                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zl7-BX-Ocp">
-                                <rect key="frame" x="0.0" y="764" width="414" height="49"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <items>
-                                    <tabBarItem title="Main" image="rectangle.3.offgrid" catalog="system" id="hXc-6E-OaY"/>
-                                    <tabBarItem title="Progress" image="chart.pie" catalog="system" selectedImage="chart.pie" id="Hzp-xz-d6u"/>
-                                </items>
-                            </tabBar>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VVr-Z7-Mn5">
                                 <rect key="frame" x="171" y="131" width="73" height="69"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -74,6 +66,146 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-35" y="94"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="dCd-6K-Ixb">
+            <objects>
+                <viewController id="osX-l0-fuH" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8PI-4p-Ujj">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="x3p-Ux-OUo"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="Lfb-56-Dr0"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="59e-Tl-hJE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-991.304347826087" y="916.74107142857133"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="fyr-20-71G">
+            <objects>
+                <viewController id="kNg-AK-BNB" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VuY-EJ-SSO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="8Vz-p8-31j"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7O3-h5-lqT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-76.811594202898561" y="901.33928571428567"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="n37-1U-JCo">
+            <objects>
+                <navigationController id="hoo-7o-Ng5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="nMe-MR-3yO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="i8s-uj-HYu">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="mbh-tk-9YO" kind="relationship" relationship="rootViewController" id="vaG-ND-bxF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sP0-Gj-Kjz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2491" y="1374"/>
+        </scene>
+        <!--Articles-->
+        <scene sceneID="YdO-r9-30t">
+            <objects>
+                <viewController id="mbh-tk-9YO" customClass="ArticleViewController" customModule="KazLinguo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="L9w-5d-zM2">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KZm-Bz-RgX">
+                                <rect key="frame" x="0.0" y="141" width="414" height="672"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <sections/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="HUO-Hq-woY"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="rEW-cp-OtG"/>
+                    <navigationItem key="navigationItem" title="Articles" id="l8P-sS-2PF"/>
+                    <connections>
+                        <outlet property="tableView" destination="KZm-Bz-RgX" id="ic7-jG-jBf"/>
+                        <segue destination="7Db-9K-pNi" kind="show" id="36H-wE-JXB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4aS-Ye-hCq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-991.304347826087" y="1816.7410714285713"/>
+        </scene>
+        <!--Article BodyVC-->
+        <scene sceneID="q9U-J0-27v">
+            <objects>
+                <viewController storyboardIdentifier="ArticleBodyVC" id="7Db-9K-pNi" customClass="ArticleBodyVC" customModule="KazLinguo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0YE-vV-GT3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="NW8-ll-PeD">
+                                <rect key="frame" x="0.0" y="148" width="414" height="665"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahD-0N-7eM">
+                                <rect key="frame" x="10" y="98" width="394" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="v4p-dP-RuY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="NW8-ll-PeD" firstAttribute="leading" secondItem="XoC-NF-X3e" secondAttribute="leading" id="2V5-Yl-8TE"/>
+                            <constraint firstItem="ahD-0N-7eM" firstAttribute="leading" secondItem="XoC-NF-X3e" secondAttribute="leading" constant="10" id="84S-Ca-Iyy"/>
+                            <constraint firstItem="NW8-ll-PeD" firstAttribute="bottom" secondItem="XoC-NF-X3e" secondAttribute="bottom" id="Gq9-oM-Fu5"/>
+                            <constraint firstItem="NW8-ll-PeD" firstAttribute="top" secondItem="ahD-0N-7eM" secondAttribute="bottom" constant="10" id="dop-ba-vCM"/>
+                            <constraint firstItem="ahD-0N-7eM" firstAttribute="top" secondItem="XoC-NF-X3e" secondAttribute="top" constant="10" id="fg1-td-m7C"/>
+                            <constraint firstItem="NW8-ll-PeD" firstAttribute="trailing" secondItem="XoC-NF-X3e" secondAttribute="trailing" id="qLh-Cr-k1h"/>
+                            <constraint firstItem="XoC-NF-X3e" firstAttribute="trailing" secondItem="ahD-0N-7eM" secondAttribute="trailing" constant="10" id="waq-GU-4Bg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="XoC-NF-X3e"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Ko6-DQ-JiT"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FXl-DE-yLC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="39.130434782608695" y="1822.7678571428571"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="kQk-r8-qXx">
+            <objects>
+                <tabBarController id="VyF-Bt-hXR" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="oyk-Ko-jpP">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="VxA-2a-2Pc" kind="relationship" relationship="viewControllers" id="KgW-SR-Sla"/>
+                        <segue destination="osX-l0-fuH" kind="relationship" relationship="viewControllers" id="evZ-is-1NP"/>
+                        <segue destination="hoo-7o-Ng5" kind="relationship" relationship="viewControllers" id="dCa-aw-JwQ"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5hy-01-zhG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2248" y="596"/>
         </scene>
         <!--Module View Controller-->
         <scene sceneID="ku6-T0-ki1">
@@ -183,6 +315,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bZL-Ig-7C2"/>
                     </view>
+                    <navigationItem key="navigationItem" id="MqF-WF-AE6"/>
                     <connections>
                         <outlet property="containerView" destination="fCx-2L-uPz" id="laZ-xj-XnY"/>
                         <outlet property="directiveLabel" destination="6Cg-lv-BC1" id="7XF-EY-M2A"/>
@@ -250,9 +383,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="chart.pie" catalog="system" width="64" height="60"/>
         <image name="heart" catalog="system" width="64" height="54"/>
-        <image name="rectangle.3.offgrid" catalog="system" width="64" height="40"/>
         <image name="xmark" catalog="system" width="64" height="56"/>
     </resources>
 </document>
