--- a/KazLinguo/View/TextCollectionViewCell.xib
+++ b/KazLinguo/View/TextCollectionViewCell.xib
@@ -10,31 +10,45 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TextCollectionViewCell" id="gTV-IL-0wX" customClass="TextCollectionViewCell" customModule="KazLinguo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="111" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="111" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iec-e0-vTW">
-                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BU4-9i-Qnf" userLabel="Container View">
+                        <rect key="frame" x="0.0" y="0.0" width="111" height="50"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iec-e0-vTW">
+                                <rect key="frame" x="5" y="3" width="101" height="44"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.69133305550000002" green="0.96423107389999996" blue="0.88774561880000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="iec-e0-vTW" secondAttribute="trailing" constant="5" id="g02-ia-0t9"/>
+                            <constraint firstItem="iec-e0-vTW" firstAttribute="leading" secondItem="BU4-9i-Qnf" secondAttribute="leading" constant="5" id="jgF-l1-ydj"/>
+                            <constraint firstAttribute="bottom" secondItem="iec-e0-vTW" secondAttribute="bottom" constant="3" id="uSx-EH-hhO"/>
+                            <constraint firstItem="iec-e0-vTW" firstAttribute="top" secondItem="BU4-9i-Qnf" secondAttribute="top" constant="3" id="w0n-Nq-yXx"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="iec-e0-vTW" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="QTV-rD-2yK"/>
-                <constraint firstAttribute="bottom" secondItem="iec-e0-vTW" secondAttribute="bottom" id="RIt-Pv-l5U"/>
-                <constraint firstItem="iec-e0-vTW" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ReS-EI-oOZ"/>
-                <constraint firstAttribute="trailing" secondItem="iec-e0-vTW" secondAttribute="trailing" id="lX3-7r-dZj"/>
+                <constraint firstAttribute="trailing" secondItem="BU4-9i-Qnf" secondAttribute="trailing" id="8JS-ul-FTo"/>
+                <constraint firstAttribute="bottom" secondItem="BU4-9i-Qnf" secondAttribute="bottom" id="KJY-BJ-eXW"/>
+                <constraint firstItem="BU4-9i-Qnf" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Km1-P8-wy2"/>
+                <constraint firstItem="BU4-9i-Qnf" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="lVp-Ce-vgb"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <size key="customSize" width="111" height="50"/>
             <connections>
+                <outlet property="containerView" destination="BU4-9i-Qnf" id="3eP-gc-4pL"/>
                 <outlet property="label" destination="iec-e0-vTW" id="k8P-hH-1cJ"/>
             </connections>
-            <point key="canvasLocation" x="139" y="121"/>
+            <point key="canvasLocation" x="93.478260869565219" y="120.53571428571428"/>
         </collectionViewCell>
     </objects>
 </document>
